--- a/account_payroll_ext/i18n/es.po
+++ b/account_payroll_ext/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-22 16:00+0000\n"
-"PO-Revision-Date: 2022-04-22 16:00+0000\n"
+"POT-Creation-Date: 2022-04-22 16:33+0000\n"
+"PO-Revision-Date: 2022-04-22 16:33+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -36,6 +36,11 @@ msgstr "Estas seguro que desea confirmar?"
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_attachment_count
 msgid "Attachment Count"
 msgstr "Contador"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__code
+msgid "Code"
+msgstr "Código"
 
 #. module: account_payroll_ext
 #: model:ir.model,name:account_payroll_ext.model_res_company
