--- a/account_payroll_ext/i18n/es.po
+++ b/account_payroll_ext/i18n/es.po
@@ -25,7 +25,7 @@ msgstr "Asientos contables de nómina"
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_needaction
 msgid "Action Needed"
-msgstr ""
+msgstr "Acción"
 
 #. module: account_payroll_ext
 #: model_terms:ir.ui.view,arch_db:account_payroll_ext.view_account_move_payroll_ext_form
@@ -130,7 +130,7 @@ msgstr ""
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_is_follower
 msgid "Is Follower"
-msgstr ""
+msgstr "Es un seguidor"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll____last_update
@@ -151,7 +151,7 @@ msgstr "Última actualización"
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_main_attachment_id
 msgid "Main Attachment"
-msgstr ""
+msgstr "Adjunto"
 
 #. module: account_payroll_ext
 #: model:res.groups,name:account_payroll_ext.account_move_payroll_ext_manager_group
@@ -166,7 +166,7 @@ msgstr "Grupo de permisos asientos contables de nómina"
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_has_error
 msgid "Message Delivery error"
-msgstr ""
+msgstr "Mensaje de error!"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_ids
@@ -182,22 +182,22 @@ msgstr "Nombre"
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_needaction_counter
 msgid "Number of Actions"
-msgstr ""
+msgstr "Número de acciones"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_has_error_counter
 msgid "Number of errors"
-msgstr ""
+msgstr "Número de errores"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,help:account_payroll_ext.field_account_move_payroll__message_needaction_counter
 msgid "Number of messages which requires an action"
-msgstr ""
+msgstr "Número de errores requeridos en la acción"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,help:account_payroll_ext.field_account_move_payroll__message_has_error_counter
 msgid "Number of messages with delivery error"
-msgstr ""
+msgstr "Número de errores con mensajes de error en la entrega"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,help:account_payroll_ext.field_account_move_payroll__message_unread_counter
