--- a/account_payroll_ext/i18n/es.po
+++ b/account_payroll_ext/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-22 18:54+0000\n"
-"PO-Revision-Date: 2022-04-22 18:54+0000\n"
+"POT-Creation-Date: 2022-04-22 19:11+0000\n"
+"PO-Revision-Date: 2022-04-22 19:11+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr "Acción"
 #. module: account_payroll_ext
 #: model_terms:ir.ui.view,arch_db:account_payroll_ext.view_account_move_payroll_ext_form
 msgid "Are you sure you want to do this?"
-msgstr "Estas seguro que desea generar asientos contables?"
+msgstr "Estas seguro que desea confirmar?"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_attachment_count
@@ -72,6 +72,16 @@ msgstr "Creado en"
 #: model:ir.model.fields,field_description:account_payroll_ext.field_res_company__display_name
 msgid "Display Name"
 msgstr "Nombre mostrado"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields.selection,name:account_payroll_ext.selection__account_move_payroll__state__done
+msgid "Done"
+msgstr "Hecho"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields.selection,name:account_payroll_ext.selection__account_move_payroll__state__draft
+msgid "Draft"
+msgstr "Borrador"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__employee_id
@@ -214,6 +224,11 @@ msgstr "Obra"
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_has_sms_error
 msgid "SMS Delivery error"
 msgstr ""
+
+#. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__state
+msgid "State"
+msgstr "Estado"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_unread
