--- a/account_payroll_ext/i18n/es.po
+++ b/account_payroll_ext/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-22 19:11+0000\n"
-"PO-Revision-Date: 2022-04-22 19:11+0000\n"
+"POT-Creation-Date: 2022-04-22 20:52+0000\n"
+"PO-Revision-Date: 2022-04-22 20:52+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -66,6 +66,16 @@ msgstr "Creado por"
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__create_date
 msgid "Created on"
 msgstr "Creado en"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__month
+msgid "Current month"
+msgstr "Mes actual"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__date
+msgid "Date"
+msgstr "Fecha"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__display_name
@@ -143,6 +153,11 @@ msgid "Is Follower"
 msgstr "Es un seguidor"
 
 #. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__is_done
+msgid "Is done"
+msgstr "Esta heccho"
+
+#. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll____last_update
 #: model:ir.model.fields,field_description:account_payroll_ext.field_res_company____last_update
 msgid "Last Modified on"
@@ -182,6 +197,11 @@ msgstr "Mensaje de error!"
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__message_ids
 msgid "Messages"
 msgstr "Mensajes"
+
+#. module: account_payroll_ext
+#: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__mjs
+msgid "Mjs"
+msgstr "Msj"
 
 #. module: account_payroll_ext
 #: model:ir.model.fields,field_description:account_payroll_ext.field_account_move_payroll__name
